--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,17 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="SCoT" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('service-worker.js')
+                .then(() => console.log('service worker installed'))
+                .catch(err => console.log('Error', err));
+      }
+    </script>
   </head>
 
   <body>
+
     <div id="app"></div>
   </body>
 
